fix guide page layout breaking on mobile chromium
It can't break links in a useful way.

--- a/src/styles/docs/docs.css
+++ b/src/styles/docs/docs.css
@@ -17,6 +17,7 @@
 
 .docslayout-inner {
   flex-grow: 1;
+  overflow-wrap: anywhere;
 }
 
 .docs {
